# Workflow

./: CMakeLists.txt  README.md  configreader.cpp  configreader.h  main.cpp
Config/: configreader.cpp  configreader.h
Exceptions/: exception.h  executor_exceptions.cpp  executor_exceptions.h  worker_exceptions.cpp  worker_exceptions.h
SecondTest/: out_file.txt  workflow.txt
ThirdTest/: in_file.txt
WorkExecutor/: work_data.cpp  work_data.h  work_executor.cpp  work_executor.h
Workers/: worker.h  worker_dump.cpp  worker_dump.h  worker_grep.cpp  worker_grep.h  worker_readfile.cpp  worker_readfile.h  worker_replace.cpp  worker_replace.h  worker_sort.cpp  worker_sort.h  worker_writefile.cpp  worker_writefile.h
tests/: tests.cpp
tests/FifthTest/: in_file.txt  workflow.txt
tests/FirstTest/: answer.txt  in_file.txt  out.txt  workflow.txt
tests/FourthTest/: workflow.txt
tests/SecondTest/: answer.txt  workflow.txt
tests/SixthTest/: workflow.txt
tests/ThirdTest/: workflow.txt
